--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"styled-components": "^5.1.1"
 	},
 	"devDependencies": {
-		"@svgr/webpack": "^5.4.0"
+		"@svgr/webpack": "^5.4.0",
+		"file-loader": "^6.0.0"
 	}
 }
